samples/compiler-tests/fail/val_with_effect.ktr
// val_with_effect.ktr -- ValWithEffect error expected
// val expression uses a request (not allowed)

request get_data() -> integer

val x: integer = get_data()
